nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs
    spec:
      containers:
      - image: avinashmishra/nodejs-helloworld:1.0.0        
        name: nodejs-helloworld
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 3000
status: {}
