nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodejs
  name: nodejs
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs
  type: ClusterIP
status:
  loadBalancer: {}
