nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nodejs.eks-demo-cluster.clusters.shastra.net
    http:
      paths:
      - backend:
          serviceName: nodejs
          servicePort: 8080
